WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184509
Preventively expect UTF8 strings from libwebrtc SDP and error messages
https://bugs.webkit.org/show_bug.cgi?id=184509
Summary
Preventively expect UTF8 strings from libwebrtc SDP and error messages
youenn fablet
Reported
2018-04-11 10:36:00 PDT
LibWebRTC currently sends SDP as std::string and only contains ASCII characters. But SDP spec does not preclude use of UTF8 characters for instance for some media stream track IDs.
Attachments
Patch
(19.85 KB, patch)
2018-04-11 11:07 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-04-11 11:07:03 PDT
Created
attachment 337716
[details]
Patch
WebKit Commit Bot
Comment 2
2018-04-11 14:49:33 PDT
Comment on
attachment 337716
[details]
Patch Clearing flags on attachment: 337716 Committed
r230548
: <
https://trac.webkit.org/changeset/230548
>
WebKit Commit Bot
Comment 3
2018-04-11 14:49:35 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-04-11 14:50:24 PDT
<
rdar://problem/39361377
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug